# cmake-boilerplate

./: CMakeLists.txt  LICENSE  main.cpp  readme.md
